--- a/src/Pages/Dashboard.css
+++ b/src/Pages/Dashboard.css
@@ -43,7 +43,7 @@
 @media only screen and (max-width: 520px) {
     
     .img-cen img{
-        width: 100%;
+        width: 90%;
     }
     
 }
@@ -72,4 +72,24 @@
 }
 .buttonD:hover{
     cursor: pointer;
+}
+.git_wrap{
+    
+    display: flex;
+    justify-content: center;
+    margin-top: -40px;
+    margin-left: 30px
+}
+
+@media only screen and (max-width: 520px) {
+    
+    .img-text{
+        
+        font-size: 100%;
+    }
+    .font_D{
+        font-size:160%;
+    }
+
+   
 }
