--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     margin-top: 60px;
+    align-items: center
 }
 .Login-text{
     margin-top: 20px;
@@ -95,3 +96,31 @@
         display: none;
     }
 }
+
+@media only screen and (max-width: 590px) {
+    
+    .LoginForm{
+        width:280px;
+    }
+    .EmailPart{
+        width:auto;
+    }
+    .subButton{
+        
+        width: 300px;
+    }
+}
+
+.skewed {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 25%;
+    background: #2c3e50;
+    z-index: 0;
+    transform: skewY(5deg);
+    transform-origin: top right;
+  }
