--- a/src/Pages/Profile.css
+++ b/src/Pages/Profile.css
@@ -134,3 +134,11 @@
     font-family: 'Lexend', sans-serif;
     font-size:130%;
 }
+
+@media only screen and (max-width: 361px) {
+    
+    .sect-2{
+       font-size: 100%;
+    }
+    
+}
