--- a/src/Pages/admin.css
+++ b/src/Pages/admin.css
@@ -26,3 +26,39 @@
     cursor: pointer;
 }
 
+
+
+.emailField_admin{
+    width: 330px;
+    height: 45px;
+    border-radius: 3px;
+    padding-left: 20px;
+    border: 1.9px solid #E5E8E8;
+    margin-top: 10px;
+    font-size: 130%;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+
+.emailField_admin:focus{
+    outline: none !important;
+    border: 1.6px solid #2E86C1;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 130%;
+    
+}
+
+.table_admin{
+    width: 800px;
+}
+
+@media only screen and (max-width: 361px) {
+    
+    
+    .emailField_admin{
+        width:200px;
+    }
+    .table_admin{
+        width:340px
+    }
+}
